# taskmaneger

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule.dir  default.conf  docker-compose.yml  nginx.conf  passwords.txt  pyproject.toml  requirement.txt  requirements.txt
custom_auth/: admin.py  models.py
custom_auth/migrations/: 0001_initial.py  0002_alter_user_options_alter_userteam_user_and_more.py  0003_alter_role_name.py  0004_alter_userteam_unique_together_delete_user.py  0005_user.py  0006_alter_userteam_unique_together.py  0007_team_users.py  0008_alter_customuser_role.py  0009_userteam_role.py  0010_alter_customuser_email_alter_customuser_username.py  0011_alter_team_users.py  0012_alter_customuser_email_alter_customuser_role_and_more.py  0013_alter_customuser_email.py  0014_alter_customuser_email.py  0015_alter_role_name_alter_team_name.py  0016_remove_userteam_role_alter_customuser_email_and_more.py  0017_user_role.py
docker/: entrypoint.sh
mysite/: celery.py  manage.py  settings.py  urls.py
polls/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  viewsets.py
polls/migrations/: 0001_initial.py  0002_comment_user_task_assigned_to_taskhistory_user.py  0003_alter_comment_user_alter_task_assigned_to_and_more.py  0004_taskstatus_alter_task_status.py  0005_alter_task_status_delete_taskstatus.py  0006_alter_comment_task_taskcomment.py  0007_alter_comment_user_alter_task_assigned_to_and_more.py  0008_alter_comment_task_alter_comment_user_and_more.py  (+16 more)
